crates/obzenflow_adapters/tests/ui/breaker_builder/incomplete_branch_build.stderr
error[E0599]: no method named `build` found for struct `CircuitBreakerBuilder<BranchFallback<Input, FallbackFact>>` in the current scope
  --> tests/ui/breaker_builder/incomplete_branch_build.rs:25:10
   |
23 |       let _ = CircuitBreaker::opens_after(1)
   |  _____________-
24 | |         .fallback_fact(|_: &Input| FallbackFact)
25 | |         .build();
   | |         -^^^^^ method not found in `CircuitBreakerBuilder<BranchFallback<Input, FallbackFact>>`
   | |_________|
   |
   |
   = note: the method was found for
           - `CircuitBreakerBuilder<Branch<Fb, R>>`
           - `CircuitBreakerBuilder<Outcome>`
           - `CircuitBreakerBuilder<Plain>`
